--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "server:watch": "nodemon --watch ./server -e js ./server/index.js",
     "parcel-build": "parcel build index.html && cp _redirects ./dist/",
     "serve": "parcel index.html"
   },
@@ -14,6 +15,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^2.0.15",
     "parcel-bundler": "^1.12.5",
     "prettier": "1.19.1"
   },
