--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "express": "^4.17.2",
     "html-literal": "^1.1.0",
     "lodash": "^4.17.21",
     "navigo": "^7.1.3",
