MongoDB connection and config

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 OPEN_WEATHER_MAP_API_KEY=7a45c989e5b4b152ef487ef5a02d153e
 PIZZA_PLACE_API_URL=https://sc-pizza-api.herokuapp.com/pizzas
 PORT=4040
+MONGODB=mongodb+srv://matsinet:savvycoders@cluster0.1dzam.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
