--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.2",
     "html-literal": "^1.1.0",
     "lodash": "^4.17.21",
+    "mongoose": "^6.1.3",
     "navigo": "^7.1.3",
     "node": "^15.8.0",
     "yargs-parser": ">=13.1.2"
